# lr-yabasanshiro

./: .gitattributes  .gitignore  DRC_X86_64_LINUX.md  Makefile  Makefile.common  test_vulkan.sh  test_vulkan_safe.sh  yabasanshiro_libretro.info
.github/workflows/: build.yml
src/: BackupManager.cpp  CMakeLists.txt  Counter.cpp  PlayRecorder.cpp  about.c  about.h  bios.c  bios.h  cdbase.c  cheat.c  coffelf.c  core.h  cs2.c  cs2.h  debug.c  debug.h  error.c  error.h  gameinfo.c  m68kcore.c  m68kcore.h  memory.c  memory.h  movie.c  osdcore.h  peripheral.c  persdljoy.c  scsp.c.orig  scsp.cpp  scsp.h  scspdsp.c  scspdsp.h  scu.c  sh2core.c  sh2int.c  sh2trace.c  sndCoreAudio.c  sndCoreAudio.h  sndal.c  state_save.cpp  (+12 more)
src/android/: build.gradle  gradle.properties
src/c68k/: CMakeLists.txt
src/ios/: CMakeLists.txt  README.md  YabaSnashiro.xctestplan  yui.cpp
src/ios/uoyabause/: Gemfile  Podfile  PrivacyInfo.xcprivacy  YabaSanshiro-Lite.xctestplan  YabaSnashiro copy-Info.plist  YabaSnashiro.entitlements  secrets.plist
src/ios/uoyabause/MetalANGLE.xcframework/: Info.plist
src/ios/uoyabause/MetalANGLE.xcframework/ios-arm64/MetalANGLE.framework/: Info.plist
src/ios/uoyabause/MetalANGLE.xcframework/ios-arm64_x86_64-simulator/MetalANGLE.framework/: Info.plist
src/ios/uoyabause/MetalANGLE.xcframework/ios-arm64_x86_64-simulator/MetalANGLE.framework/_CodeSignature/: CodeResources
src/ios/uoyabause/YabaSnashiro.xcodeproj/: project.pbxproj
src/ios/uoyabause/YabaSnashiro.xcodeproj/xcshareddata/xcschemes/: YabaSnashiro-Lite.xcscheme  YabaSnashiro.xcscheme
src/ios/uoyabause/YabaSnashiro.xcodeproj/xcuserdata/devmiyax.xcuserdatad/xcschemes/: xcschememanagement.plist
src/ios/uoyabause/YabaSnashiroUITests-Lite/: YabaSanshiroUITests-Lite-Bridging-Header.h
src/ios/uoyabause/fastlane/: Appfile  Fastfile  Matchfile  Pluginfile  README.md  Snapfile
src/ios/uoyabause/uoyabause/: AppDelegate.swift  Colors.swift  DiscordAuthManager.swift  DiscordOAuthRedirectHandler.swift  DraggableCircleView.swift  FileSelectController.swift  GameInfo.swift  GameMainViewController.swift  GameViewController.swift  GoogleService-Info-Debug.plist  Info-lite.plist  Info.plist  KeyMapper.h  KeyMapper.m  KeyMapper.swift  LeaderBoardController.swift  LeaderBoardRepository.swift  LeaderBoardViewModel.swift  Localizable.xcstrings  Localizable.xcstrings.bak  Localizable2.xcstrings  LoginViewController.swift  MainScreenController.swift  MenuViewController.swift  NotoSansJP-VariableFont_wght.pkl  PadButton.swift  ReportDialog.swift  Roboto-Regular.cw127.pkl  Roboto-Regular.pkl  SaturnControllerKeys.h  SaturnKey.swift  SettingsViewController.swift  StarRatingView.swift  StoreReviewHelper.swift  UIDevice.swift  UserProfileViewController.swift  YabaInterface.h  YabaInterface.mm  game.cue  settings.plist  (+1 more)
src/ios/uoyabause/uoyabause/Assets.xcassets/AppIcon.appiconset/: Contents.json
src/ios/uoyabause/uoyabause/Assets.xcassets/Discord-Symbol-Blurple.imageset/: Contents.json
src/ios/uoyabause/uoyabause/Assets.xcassets/missing.imageset/: Contents.json
src/ios/uoyabause/uoyabause/BackupManager/: BackupFileListViewController.swift
src/ios/uoyabause/uoyabause/Base.lproj/: Main.storyboard
src/ios/uoyabause/uoyabause/Cheat/: CloudCheatTableViewCell.swift  CloudCheatViewController.swift  LocalCheatTableViewCell.swift  LocalCheatViewController.swift  TabCheatViewController.swift  YabauseManager.swift
src/ios/uoyabause/uoyabause/YabaSnashiro Localizations/en.xcloc/: contents.json
src/ios/uoyabause/uoyabause/YabaSnashiro Localizations/en.xcloc/Localized Contents/: en.xliff
src/ios/uoyabause/uoyabause/YabaSnashiro Localizations/en.xcloc/Source Contents/uoyabause/en.lproj/: Info-lite-InfoPlist.strings
src/ios/uoyabause/uoyabause/YabaSnashiro Localizations/es.xcloc/: contents.json
src/ios/uoyabause/uoyabause/YabaSnashiro Localizations/es.xcloc/Localized Contents/: es.xliff
src/ios/uoyabause/uoyabause/YabaSnashiro Localizations/es.xcloc/Source Contents/uoyabause/: Localizable.xcstrings
src/ios/uoyabause/uoyabause/YabaSnashiro Localizations/es.xcloc/Source Contents/uoyabause/en.lproj/: InfoPlist.strings
src/ios/uoyabause/uoyabause/YabaSnashiro Localizations/ja.xcloc/: contents.json
src/ios/uoyabause/uoyabause/YabaSnashiro Localizations/ja.xcloc/Localized Contents/: ja.xliff
src/ios/uoyabause/uoyabause/YabaSnashiro Localizations/pt-BR.xcloc/: contents.json
src/ios/uoyabause/uoyabause/YabaSnashiro Localizations/pt-BR.xcloc/Localized Contents/: pt-BR.xliff
src/ios/uoyabause/uoyabause/YabaSnashiro Localizations/pt-BR.xcloc/Source Contents/uoyabause/Base.lproj/: Main.storyboard
src/ios/uoyabause/uoyabause/YabaSnashiro Localizations/ru.xcloc/: contents.json
src/ios/uoyabause/uoyabause/YabaSnashiro Localizations/ru.xcloc/Localized Contents/: ru.xliff
src/ios/uoyabause/uoyabause/YabaSnashiro Localizations/zh-Hans.xcloc/: contents.json
src/ios/uoyabause/uoyabause/YabaSnashiro Localizations/zh-Hans.xcloc/Localized Contents/: zh-Hans.xliff
src/ios/uoyabause/uoyabause/game/: BaseGame.swift  SonicR.swift
src/ios/uoyabause/uoyabause/mul.lproj/: Main.xcstrings
src/ios/uoyabause/uoyabause/util/: DiscordWebhook.swift
src/ios/uoyabause/uoyabauseTests/: Info.plist
src/ios/uoyabause/uoyabauseUITests/: Info.plist  MainScreenTest.swift
src/libretro/: PROGRESS.md  glsym_private.h  libretro.c  vidvulkan_bridge.cpp  vidvulkan_bridge.h  (+7 more)
src/retro_arena/: CMakeLists.txt  EventManager.cpp  GameInfo.cpp  InputConfig.cpp  InputManager.cpp  InputManager.h  MenuScreen.cpp  MenuScreen.cpp.orig  MenuScreen.h  Preference.cpp  Preference.h  application.rc  common.h  default.config  howtouse.md  main.cpp
src/retro_arena/nanogui-sdl/: CMakeLists.txt
src/retro_arena/nanogui-sdl/ext/nanovg/: nanovg_gl.h
src/retro_arena/nanogui-sdl/include/nanogui/: combobox.h  common.h  glutil.h  imageview.h  messagedialog.h  opengl.h  popupbutton.h  screen.h  widget.h
src/retro_arena/nanogui-sdl/src/: button.cpp  combobox.cpp  common.cpp  glutil.cpp  imageview.cpp  messagedialog.cpp  popupbutton.cpp  screen.cpp  widget.cpp
(+240 files in other folders)
